[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/Oswald-VariableFont_wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 21
font_data = ExtResource( 1 )

[node name="Menu" type="Node2D"]
script = ExtResource( 2 )

[node name="IPAddress" type="LineEdit" parent="."]
margin_left = 128.0
margin_top = 552.0
margin_right = 320.0
margin_bottom = 584.0
text = "127.0.0.1"
clear_button_enabled = true

[node name="UserName" type="LineEdit" parent="."]
margin_left = 128.0
margin_top = 512.0
margin_right = 320.0
margin_bottom = 544.0
text = "Player"
clear_button_enabled = true

[node name="ButtonConnect" type="Button" parent="."]
margin_left = 704.0
margin_top = 552.0
margin_right = 896.0
margin_bottom = 583.0
custom_fonts/font = SubResource( 1 )
text = "Подключиться к серверу"
align = 0

[node name="ButtonHost" type="Button" parent="."]
margin_left = 704.0
margin_top = 512.0
margin_right = 896.0
margin_bottom = 544.0
custom_fonts/font = SubResource( 1 )
text = "Создать сервер"
align = 0

[node name="LabelStatus" type="Label" parent="."]
margin_left = 184.0
margin_top = 448.0
margin_right = 840.0
margin_bottom = 481.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_top = 520.0
margin_right = 120.0
margin_bottom = 536.0
bbcode_enabled = true
bbcode_text = "[right]UsenName:[/right]"
text = "UsenName:"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_top = 560.0
margin_right = 120.0
margin_bottom = 576.0
bbcode_enabled = true
bbcode_text = "[right]IP:[/right]"
text = "IP:"

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 328.0
margin_top = 512.0
margin_right = 696.0
margin_bottom = 584.0
bbcode_enabled = true
bbcode_text = "[b][center]News[/center][/b][i]18.08.2022[/i]
[list][*]Updated the menu[/*][*]Updated the character[/*][*]Fixed the physics in the new level[/*][*]Removed the background in the main menu[/*][/list]"
text = "News18.08.2022
[list][*]Updated the menu[/*][*]Updated the character[/*][*]Fixed the physics in the new level[/*][*]Removed the background in the main menu[/*][/list]"

[connection signal="pressed" from="ButtonConnect" to="." method="_on_ButtonConnect_pressed"]
[connection signal="pressed" from="ButtonHost" to="." method="_on_ButtonHost_pressed"]
